--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,21 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.box {
+  border: 2px solid white;
+}
+.box2 {
+  border: 5px solid #1c2a4d;
+  background: #0f172a;
+}
+.azure{
+  background-color: #0f172a;
+}
+.info {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    margin-top: 20px;
+    width: 100%;
+    gap: 10px;
+}
