fini, mit la descritpion des projet , experience, plus corection ortho et rajoue image backgroud pour que sa face moin vide

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,3 +42,70 @@ body {
     width: 100%;
     gap: 10px;
 }
+
+.img1 {
+  position: relative; /* Indispensable pour placer l'image par rapport au bloc */
+  overflow: hidden;   /* Évite que l'image ne dépasse du cadre */
+  min-height: 300px; /* Force une hauteur pour le test */
+  width: 100%;
+
+  z-index: 1;
+}
+
+.img1::before {
+  content: "";
+  position: absolute;
+  top: 0; 
+  left: 0;
+  width: 100%;
+  height: 100%;
+  
+  /* L'image de fond */
+  background-image: url("/image/tatouDragon.png");
+  background-repeat: no-repeat; /* Évite les doublons */
+  background-position: center;  /* Centre la silhouette */
+  background-size: contain;     /* Adapte la taille pour voir toute la silhouette */
+  
+  /* Opacité faible (attention : utilise un point "." et non une virgule) */
+  opacity: 0.02; 
+  
+  z-index: 0; /* Place l'image derrière le contenu */
+}
+
+/* On s'assure que le texte passe devant */
+.img1 > * {
+  position: relative;
+  z-index: 1;
+}
+
+.img2 {
+   /* Indispensable pour placer l'image par rapport au bloc */
+  overflow: hidden;   /* Évite que l'image ne dépasse du cadre */
+
+}
+
+.img2::before {
+  content: "";
+  position: absolute;
+  top: 0; 
+  left: 0;
+  width: 100%;
+  height: 100%;
+  
+  /* L'image de fond */
+  background-image: url("/image/redDragon.png");
+  background-repeat: no-repeat; /* Évite les doublons */
+  background-position: center;  /* Centre la silhouette */
+  background-size: contain;     /* Adapte la taille pour voir toute la silhouette */
+  
+  /* Opacité faible (attention : utilise un point "." et non une virgule) */
+  opacity: 0.02; 
+  
+  z-index: 0; /* Place l'image derrière le contenu */
+}
+
+/* On s'assure que le texte passe devant */
+.img2 > * {
+  position: relative;
+  z-index: 1;
+}
