--- a/app/globals.css
+++ b/app/globals.css
@@ -36,8 +36,11 @@ body {
   background-color: #0f172a;
 }
 .info {
-  display: flex !important;
-  flex-direction: column !important;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    margin-top: 20px;
+    width: 100%;
+    gap: 10px;
 }
 
 .img1 {
