--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
 * {
+  margin:0;
+  padding: 0;
   box-sizing: border-box;
+  font-family: 'Segoe UI', Verdana, Geneva, Tahoma, sans-serif 
 }
 :root {
   --background: #ffffff;
